# AA-Koru

./: .gitignore  MANIFEST.in  README.md  __init__.py  apps.py  hooks.py  pyproject.toml  urls.py  views.py
koru_stats/: __init__.py  admin.py  apps.py  hooks.py  models.py  tasks.py  urls.py  views.py
koru_stats/migrations/: 0001_initial.py  0002_moontaxconfig_alter_general_options_and_more.py  0003_alter_general_options_alter_moontaxconfig_tag_and_more.py  0004_add_perf_indexes.py  0005_character_monthly_summary.py  0006_delete_charactermonthlyore_and_more.py  0007_restore_character_monthly_tables.py  0008_alter_charactermonthlyore_id_and_more.py  0008_ore_prices_pvp_module.py  0009_merge_20260607_1302.py  0010_alter_general_options_alter_charactermonthlyore_isk_and_more.py  0011_charactermonthlypvp_damage_dealt_and_more.py  0012_characterkillrecord.py  0013_characterkillrecord_ship_name.py  0014_characterkillrecord_enemy_fields.py  0015_characterkillrecord_kill_hour.py  0016_auditor.py  0017_auditor_fase2.py  0018_tickets.py  0019_corphealthsnapshot_alter_general_options_and_more.py
koru_stats/templates/koru_stats/: auditor_dashboard.html  auditor_pilot.html  corp_dashboard.html  corp_health_dashboard.html  corp_recruitment_dashboard.html  corp_social_dashboard.html  dashboard.html  mi_dashboard.html  moon_dashboard.html  moon_dashboard_v2.html  pvp_dashboard.html  ticket_detail.html  tickets_dashboard.html  tickets_stats.html
koru_stats/templatetags/: koru_stats_tags.py
templates/rekstats/: dashboard.html  mi_dashboard.html
(+1 files in other folders)
