[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "koru-stats"
version = "0.2.0"
description = "Rekium Corp Statistics App for Alliance Auth"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "allianceauth>=5.0.0",
]

[project.urls]
Repository = "https://github.com/ZigorFM/AA-Koru"

[tool.setuptools]
packages = ["koru_stats"]

[tool.setuptools.package-data]
koru_stats = [
    "templates/**/*",
    "static/**/*",
]
